--- a/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp3.html
@@ -1190,6 +1190,89 @@ int main() {
 1 2 3 4 5
 </pre>
   <code>NO</code>
+
+  <h4>Пример 3</h4>
+<pre>
+5
+1 3 3 4 4
+</pre>
+  <code>NO</code>
+
+  <h4>Пример 4</h4>
+<pre>
+5
+2 0 0 4 4
+</pre>
+  <code>YES</code>
+
+  <h4>Пример 5</h4>
+<pre>
+5
+2 0 0 3 3
+</pre>
+  <code>NO</code>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Чтобы выполнилось условие, необходимо чтобы изначально во всех элементах массива содержалось одно из трех</p>
+    <ol>
+      <li>одинаковое число</li>
+      <li>два разных числа</li>
+      <li>три числа a > b > c таких, что a - b = b -c</li>
+    </ol>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;
+  cin >> n;
+
+  // решение
+  int tmp, a{-1}, b{-1}, c{-1};
+  bool res = true;
+  for (int i = 0; i &lt; n; i++) {
+    cin >> tmp;
+    if (tmp == a || tmp == b || tmp == c) {
+      continue;
+    }
+    if ((a >= 0) && (b >= 0) && (c >= 0)) {
+      if (!(tmp == a || tmp == b || tmp == c)) {
+        res = false;
+      }
+    } else if (a == -1) {
+      a = tmp;
+    } else if (b == -1) {
+      if (tmp > a) {
+        b = a;
+        a = tmp;
+      } else {
+        b = tmp;
+      }
+    } else if (c == -1) {
+      if ((tmp == a + (a - b)) ||
+          (tmp == b - (a - b)) ||
+          (a - tmp == tmp - b)) {
+         c = tmp;
+      } else {
+        res = false;
+      }
+    } else {
+      res = false;
+    }
+  }
+
+  // вывод результата
+  if (res) {
+    cout &lt;&lt; "YES";
+  } else {
+    cout &lt;&lt; "NO";
+  }
+}
+</pre>
+  </details>
 </article>
 
 
