--- a/src/components/front/front-edu/pages/dsr2024cpp/lec13.html
+++ b/src/components/front/front-edu/pages/dsr2024cpp/lec13.html
@@ -10,6 +10,9 @@
   <h2>Содержание</h2>
 
   <p><a href="#p1">Односвязный список</a></p>
+  <p><a href="#task1">Задача 1. Удалить все вхождения заданного элемента из списка</a></p>
+  <p><a href="#task2">Задача 2. Удалить все дубликаты из списка</a></p>
+  <p><a href="#task3">Задача 3. Объединить два упорядоченных списка меняя ссылки в исходных списках</a></p>
 </article>
 
 
@@ -177,5 +180,26 @@ Node* find(Node* head, int element) {
 9 8 7 6 1
 9 8 7 6 1
 </pre>
+</article>
+
+
+<!-- Задача 1. Удалить все вхождения заданного элемента из списка -->
+<article class="article">
+  <div class="anchor" id="task1"></div>
+  <h3>Задача 1. Удалить все вхождения заданного элемента из списка</h3>
+</article>
+
+
+<!-- Задача 2. Удалить все дубликаты из списка -->
+<article class="article">
+  <div class="anchor" id="task2"></div>
+  <h3>Задача 2. Удалить все дубликаты из списка</h3>
+</article>
+
+
+<!-- Задача 3. Объединить два упорядоченных списка меняя ссылки в исходных списках -->
+<article class="article">
+  <div class="anchor" id="task3"></div>
+  <h3>Задача 3. Объединить два упорядоченных списка меняя ссылки в исходных списках</h3>
 </article>
 
