--- a/src/components/header/social-icons/elem-social-icons.html
+++ b/src/components/header/social-icons/elem-social-icons.html
@@ -14,6 +14,8 @@
 
   <a class="social__icon social__icon_cf" href="https://codeforces.com/profile/frontend200tb" title="Codeforces" target="_blank"></a>
 
+  <a class="social__icon social__icon_lc" href="https://leetcode.com/u/frontend200tb/" title="LeetCode" target="_blank"></a>
+
   <a class="social__icon social__icon_cp" href="https://codepen.io/ivan200tb/" title="Codepen" target="_blank"></a>
 
   <a class="social__icon social__icon_replit" href="https://replit.com/@frontend200tb" title="Repl.it" target="_blank"></a>
