--- a/src/components/front/front-edu/pages/dsr2024cpp/lec12.html
+++ b/src/components/front/front-edu/pages/dsr2024cpp/lec12.html
@@ -16,6 +16,8 @@
   <p><a href="#p5">Экспоненциальный поиск</a></p>
   <p><a href="#task1">Задание 1. Найти индекс числа в массиве</a></p>
   <p><a href="#task2">Задание 2. Найти минимальный диапазон индексов</a></p>
+  <p><a href="#home-work">Домашнее задание</a></p>
+  <p><a href="#leetcode4">(Hard) LeetCode 4. Median of Two Sorted Arrays </a></p>
 </article>
 
 
@@ -537,6 +539,100 @@ int main () {
   std::cin >> target;
   int right = exp_search(array, n, target);
   std::cout &lt;&lt; right / 2 &lt;&lt; " " &lt;&lt; right;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Домашнее задание -->
+<article class="article">
+  <div class="anchor" id="home-work"></div>
+  <h3>Домашнее задание</h3>
+
+  <p><a href="https://leetcode.com/problem-list/binary-search/">https://leetcode.com/problem-list/binary-search/</a></p>
+  <p>Можно посмотреть простенькие задачки вот тут, в большей части идут пояснения для решений.</p>
+</article>
+
+
+<!-- (Hard) LeetCode 4. Median of Two Sorted Arrays -->
+<article class="article">
+  <div class="anchor" id="leetcode4"></div>
+  <h3>(Hard) LeetCode 4. Median of Two Sorted Arrays</h3>
+
+  <p><a href="https://leetcode.com/problems/median-of-two-sorted-arrays/description/">https://leetcode.com/problems/median-of-two-sorted-arrays/description/</a></p>
+
+  <p>Given two sorted arrays nums1 and nums2 of size m and n respectively, return the median of the two sorted arrays.</p>
+
+  <p>The overall run time complexity should be O(log (m+n)).</p>
+
+  <h4>Example 1:</h4>
+  <code>Input: nums1 = [1,3], nums2 = [2]</code>
+  <code>Output: 2.00000</code>
+  <p>Explanation: merged array = [1,2,3] and median is 2.</p>
+
+  <h4>Example 2:</h4>
+  <code>Input: nums1 = [1,2], nums2 = [3,4]</code>
+  <code>Output: 2.50000</code>
+  <p>Explanation: merged array = [1,2,3,4] and median is (2 + 3) / 2 = 2.5.</p>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+double findMedianSortedArrays(
+vector&lt;int&gt;& nums1, vector&lt;int&gt;& nums2);
+
+int main() {
+  vector&lt;int&gt; nums1 = { 1, 3 }, nums2 = { 2 };
+  double res = findMedianSortedArrays(nums1, nums2);
+  cout &lt;&lt; res &lt;&lt; '\n';
+
+  nums1 = { 1, 2 }, nums2 = { 3, 4 };
+  res = findMedianSortedArrays(nums1, nums2);
+  cout &lt;&lt; res &lt;&lt; '\n';
+}
+
+double findMedianSortedArrays(
+vector&lt;int&gt;& nums1, vector&lt;int&gt;& nums2) {
+  int m = nums1.size();
+  int n = nums2.size();
+  int k = m + n;
+  vector&lt;int&gt; nums3;
+  int p1{}, p2{};
+  double median{};
+
+  while (p1 &lt; m && p2 &lt; n) {
+    if (nums1[p1] > nums2[p2]) {
+      nums3.push_back(nums2[p2]);
+      p2++;
+    } else {
+      nums3.push_back(nums1[p1]);
+      p1++;
+    }
+  }
+
+  while (p1 &lt; m) {
+    nums3.push_back(nums1[p1]);
+    p1++;
+  }
+
+  while (p2 &lt; n) {
+    nums3.push_back(nums2[p2]);
+    p2++;
+  }
+
+  if (k % 2 == 1) {
+    median = nums3[k / 2];
+  } else {
+    median = (double)(nums3[k / 2 - 1] + nums3[k / 2]) / 2;
+  }
+
+  return median;
 }
 </pre>
   </details>
